<resources>
    <string name="app_name">Mental Assistant</string>
    <string name="STR_YES">Так</string>
    <string name="STR_UNKNOWN">Невідомо</string>
    <string name="STR_NO">Ні</string>

    <string name="buttonRorschach">Тест Роршаха</string>
    <string name="buttonDiagnostics">Діагностика</string>
    <string name="buttonExit">Вихід</string>

    <!--Rorschach Test screen-->
    <string name="please_answer">Будь ласка, дайте відповіді на наступні запитання:</string>
    <string name="question1">1. Що ви бачите?</string>
    <string name="question1_human">Людські образи</string>
    <string name="question1_animal">Будь-які представники тваринного світу</string>
    <string name="question1_things">Предмети неживої природи</string>
    <string name="question1_fantastic">Інші фантастичні предмети</string>

    <string name="question2">2. Цей образ знаходиться в русі?</string>
    <string name="question2_yes">Так</string>
    <string name="question2_no">Ні</string>

    <string name="question3">3. Ваша асоціація стосується:</string>
    <string name="question3_general">Зображення загалом</string>
    <string name="question3_partly">Окремого фрагменту зображення</string>

    <string name="question4">4. Оцініть наскільки образ є чітким та яскравим?</string>
    <string name="question4_neither">Образ нечіткий та неяскравий</string>
    <string name="question4_vivid">Образ в першу чергу яскравий</string>
    <string name="question4_clear">Образ в першу чергу чіткий</string>

    <string name="button_next">Далі</string>
    <string name="button_result">Результат</string>

    <string name="data_not_valid">Будь ласка, дайте відповідь на всі запитання</string>

    <!--Rorschach Test Result screen-->

    <string name="animal_normal">Вашими сильними сторонами є взаємопорозуміння та кооперація в області мислення.</string>
    <string name="animal_bad">Ви страждаєте стереотипністю, бідністю інтересів.</string>

    <string name="human_normal">В вас відсутні конфлікти зі сприйняттям самого себе.</string>
    <string name="human_bad">У вас можливі конфлікти з самим собою, своїм тілом та іншими людьми, наприклад, в сфері сексуальних відносиню</string>

    <string name="motion_normal"> </string>
    <string name="motion_bad"> </string>


</resources>