<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/img_picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/q0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/please_answer"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/question1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/rg_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RadioButton
                android:id="@+id/rb_question1_human"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_human"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question1_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_animal"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question1_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_things"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question1_fantastic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1_fantastic"
                android:textColor="@color/colorSecondaryText"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/question2"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/rg_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RadioButton
                android:id="@+id/rb_question2_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2_yes"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question2_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2_no"
                android:textColor="@color/colorSecondaryText"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/question3"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/rg_question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RadioButton
                android:id="@+id/rb_question3_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3_general"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question3_partly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3_partly"
                android:textColor="@color/colorSecondaryText"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/question4"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/rg_question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RadioButton
                android:id="@+id/rb_question4_neither"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_neither"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question4_vivid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_vivid"
                android:textColor="@color/colorSecondaryText"/>

            <RadioButton
                android:id="@+id/rb_question4_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_clear"
                android:textColor="@color/colorSecondaryText"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/button_next"/>

        <Button
            android:id="@+id/btn_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_result"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>