<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <Button
                android:id="@+id/button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonRorschach"/>

        <Button
                android:id="@+id/buttonStart"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonDiagnostics"/>


        <Button
                android:id="@+id/buttonExit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonExit"/>

    </LinearLayout>
</RelativeLayout>